welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: reassignment to val
	if (talking=true){if (hour>6&&hour<21){return false}else{return true}}
                   ^